syntax = "proto3";

package abi;

message ImageSpec {
        repeated Spec specs = 1;
}

// 处理图片改变大小
message Resize {
    uint32 width = 1;
    uint32 height = 2;

    enum ResizeType {
        NORMAL = 0;
        SEAM_CARVE = 1;
    }

    ResizeType r_type = 3;

    enum SampleFilter {
        UNDEFINED = 0;
        NEAREST = 1;
        TRIANGLE = 2;
        CATMULL_ROM = 3;
        GAUSSIAN = 4;  //高斯
        LANCZOS3 = 5;
    }

    SampleFilter filter = 4;
}



// 处理图片截取
message Crop {
    uint32 x1 = 1;
    uint32 y1 = 2;
    uint32 x2 = 3;
    uint32 y2 = 4;
}

// 处理水平翻转
message FlipH {}
// 处理垂直翻转
message FlipV {}

//处理对比度
message Contrast {
    float contrast = 1;
}

message Filter {
  enum FilterType {
    UNSPECIFIED = 0;
    OCEANIC = 1;
    ISLANDS = 2;
    MARINE = 3;
    // more: https://docs.rs/photon-rs/0.3.1/photon_rs/filters/fn.filter.html
    }
    FilterType filter = 1;
}


// 处理水印
message Watermark {
    uint32 x = 1;
    uint32 y = 2;
}

// 一个 spec 可以包含上述的处理方式之一
message Spec {
    oneof data {
        Resize resize = 1;
        Crop crop = 2;
        FlipV flip_v = 3;
        FlipH flip_h = 4;
        Contrast contrast = 5;
        Filter filter = 6;
        Watermark watermark = 7;
    }
}
